@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007 Scott E. Johnston
+ * Copyright (c) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008 Scott E. Johnston
  * Copyright (c) 2000  Vectaport Inc., IET Inc
  * Copyright (c) 1999  Vectaport Inc., IET Inc, R.B. Kissh and Associates
  * Copyright (c) 1998  Vectaport Inc., R.B. Kissh and Associates, Eric F. Kahler
