@@ -2,7 +2,7 @@
 			README for ivtools 1.2
 
 
-This directory contains a release of ivtools 1.2.6.  You should read
+This directory contains a release of ivtools 1.2.7.  You should read
 the rest of this file for information on what ivtools is and the
 INSTALL file for instructions on how to build it.
 
