@@ -1,3 +1,3 @@
-#define IvtoolsVersion 1.2.6
-#define VersionString "1.2.6"
-#define ReleaseString "ivtools-1.2.6"
+#define IvtoolsVersion 1.2.7
+#define VersionString "1.2.7"
+#define ReleaseString "ivtools-1.2.7"
