@@ -1,3 +1,7 @@
+October 9th, 2008  ivtools-1.2.7
+
+- balance of changes to support ipl-1.0.3
+
 July 9th, 2008  ivtools-1.2.6
 
 - Debian contributed patch for iostreams backward compatibility
